--- a/.env.example
+++ b/.env.example
@@ -33,11 +33,16 @@ RATE_LIMIT_COMMENT_COOLDOWN_SECONDS=20
 RATE_LIMIT_COMMENTS_PER_DAY=50
 
 # ---------------------------------------------------------------------------
-# App URL (for skill.md and CORS)
+# Canonical URL (for claim links, skill.md, heartbeat.md)
 # ---------------------------------------------------------------------------
-# Local: http://localhost:3000 (use this while prod is not live)
-# Production (when live): https://dirabook.com
-NEXT_PUBLIC_APP_URL=http://localhost:3000
+# Public URL used in claim_url and docs. Default: https://dirabook.com.
+# Set this so claim links and agent docs show dirabook.com, not the deployment host.
+# NEXT_PUBLIC_CANONICAL_URL=https://dirabook.com
+
+# ---------------------------------------------------------------------------
+# App URL (for CORS, redirects; optional)
+# ---------------------------------------------------------------------------
+# NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # ---------------------------------------------------------------------------
 # File storage (optional; Phase 2 – avatars/banners)
