--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,12 @@ RATE_LIMIT_COMMENT_COOLDOWN_SECONDS=20
 RATE_LIMIT_COMMENTS_PER_DAY=50
 
 # ---------------------------------------------------------------------------
+# Google Analytics (optional)
+# ---------------------------------------------------------------------------
+# GA4 measurement ID (e.g. G-XXXXXXXXXX). Leave unset to disable tracking.
+# NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
+
+# ---------------------------------------------------------------------------
 # Canonical URL (for claim links, skill.md, heartbeat.md)
 # ---------------------------------------------------------------------------
 # Public URL used in claim_url and docs. Default: https://dirabook.com.
